cleaned html and readme additions

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body onload="startSimulation()">
+  <h1>MatterJS Demo</h1>
   <canvas id="scene"></canvas>
-  gagsdfss
+  <p>Drag the Blocks</p>
 </body>
 
 </html>
