added walls ceiling and more shapes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <h1>MatterJS Demo</h1>
   <canvas id="scene"></canvas>
   <p>Drag the Blocks</p>
+  <div onclick="refresh()">
+    <p>[ Reload ]</p>
+  </div>
+  
 </body>
 
 </html>
